# MotionBERT

./: pyproject.toml
lib/: __init__.py
