[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel.force-include]
"." = "motionbert"

[project]
name = "motionbert"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "easydict>=1.13",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.0.0",
]
